[package]
name = "wolf_engine_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wolf_engine = {version = "0.17", features = ["logging"]}
wolf_engine_sdl2 = "0.3"
sdl2 = {version = "0.35", features = ["gfx", "image"]}
log = "0.4"

